Fixed brand-logo on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -24,3 +24,9 @@ img {
 .menu-icon {
   color: white;
 }
+
+@media only screen and (max-width: 992px) {
+  .brand-logo {
+    position: relative !important;
+  }
+}
